--- a/src/components/Welcome/WelcomeContent.module.css
+++ b/src/components/Welcome/WelcomeContent.module.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin: 20px; */
   min-width: 320px;
   @media (min-width: 375px) {
     width: 335px;
@@ -29,28 +28,31 @@
 .welcomeIcon {
   width: 124px;
   height: 124px;
+  margin-bottom: 14px;
 
   @media (min-width: 768px) {
     width: 162px;
     height: 162px;
+    margin-bottom: 24px;
   }
 }
 
 .welcomeLogo {
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 42px;
   gap: 14px;
 
   @media (min-width: 768px) {
     height: 60px;
+    margin-bottom: 36px;
   }
 }
 
 .welcomeLogoIcon {
   width: 40px;
   height: 40px;
+  stroke: #ffffff;
 
   @media (min-width: 768px) {
     width: 48px;
@@ -63,17 +65,54 @@
   font-size: 28px;
   font-family: Poppins;
   font-weight: 600;
+  letter-spacing: -1.12px;
 
   @media (min-width: 768px) {
     font-size: 40px;
+    letter-spacing: -1.6px;
   }
 }
 
 .welcomeText {
+  margin-top: 24px;
+  margin-bottom: 48px;
+  text-align: center;
   color: #161616;
   font-size: 14px;
   font-family: 'Poppins';
+  line-height: 1.28;
+  letter-spacing: -0.28px;
   min-width: 320px;
+
+  @media (min-width: 375px) {
+    width: 335px;
+  }
+
+  @media (min-width: 768px) {
+    width: 473px;
+    margin-bottom: 36px;
+  }
+}
+
+.welcomeRegisterBtn {
+  padding: 14px 0;
+  margin-bottom: 14px;
+  text-decoration: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  letter-spacing: -0.28px;
+  min-width: 320px;
+  border-radius: 8px;
+  background: #161616;
+
+  transition: all 250ms linear;
+
+  &:hover {
+    opacity: 0.8;
+  }
 
   @media (min-width: 375px) {
     width: 335px;
@@ -84,45 +123,92 @@
   }
 }
 
-
-.welcomeRegisterBtn {
-  padding: 12px;
-  margin-bottom: 12px;
+.welcomeLoginBtn {
+  padding: 14px 0;
+  margin-bottom: 14px;
   text-decoration: none;
   color: #ffffff;
   text-align: center;
   font-size: 14px;
   font-family: 'Poppins';
-  min-width: 335px;
+  font-weight: 500;
+  letter-spacing: -0.28px;
+  min-width: 320px;
   border-radius: 8px;
   background: #161616;
 
-  /* &:hover {
-    opacity: 0.8;
-  } */
+  transition: all 250ms linear;
+
+  &:hover {
+    /* color: #9dc888; */
+    background-color: #9dc888;
+    /* opacity: 0.8; */
+  }
+
+  @media (min-width: 375px) {
+    width: 335px;
+  }
 
   @media (min-width: 768px) {
-    width: 344px;
+    width: 473px;
   }
 }
 
-.welcomeLoginBtn {
-  padding: 12px;
-  margin-bottom: 12px;
+.welcomeTestBtn {
+  padding: 14px 0;
+  margin-bottom: 14px;
   text-decoration: none;
   color: #ffffff;
   text-align: center;
   font-size: 14px;
   font-family: 'Poppins';
-  min-width: 335px;
+  font-weight: 500;
+  letter-spacing: -0.28px;
+  min-width: 320px;
   border-radius: 8px;
   background: #161616;
 
-  /* &:hover {
-      opacity: 0.8;
-    } */
+  transition: all 250ms linear;
+
+  &:hover {
+    background-color: #9dc888;
+    color: #161616;
+  }
+
+  @media (min-width: 375px) {
+    width: 335px;
+  }
 
   @media (min-width: 768px) {
-    width: 344px;
+    width: 473px;
+  }
+}
+
+.welcomeTest {
+  padding: 14px 0;
+  margin-bottom: 14px;
+  text-decoration: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  letter-spacing: -0.28px;
+  min-width: 320px;
+  border-radius: 8px;
+  background: #161616;
+
+  transition: all 250ms linear;
+
+  &:hover {
+    color: #9dc888;
+  }
+
+  @media (min-width: 375px) {
+    width: 335px;
+  }
+
+  @media (min-width: 768px) {
+    width: 473px;
   }
 }
