--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,11 +1,14 @@
 .sideBar {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     top: 0;
     left: 0;
     width: 225px;
     height: 100vh;
     background-color: var(--sidebarBgColor);
-    transform: translateX(-100%);
+    /* transform: translateX(-100%); */
     transition: 500ms transform;
 }
 
@@ -17,6 +20,7 @@
 
 @media screen and (min-width: 1440px) {
     .sideBar {
+        position: static;
         width: 260px;
         transform: none;
 
@@ -60,12 +64,13 @@
 }  */
 
 .titleBox {
-    margin: 14px 14px 40px 14px;
+    padding: 14px 14px 30px 14px;
 }
 
 @media screen and (min-width: 768px) {
     .titleBox {
-        margin: 24px 24px 40px 24px;
+        
+        padding: 24px 24px 40px 24px;
     }
 }
 
@@ -89,6 +94,7 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: -0.64px;
+    margin: 0;
 }
 
 .bordBox {
@@ -144,6 +150,8 @@
     border-radius: 6px;
     background-color: var(--accentColor);
     transition: background-color 0.3s ease;
+
+    cursor: pointer;
 }
 
 .buttonCreate:hover {
@@ -157,25 +165,27 @@
 .bordList {
     color: var(--mainTextColor);
     margin-bottom: auto;
-    left: 0px;
-    top: 212px;
-    height: 122px;
     overflow-y: auto;
+    margin: 0;
+    padding: 0 24px;
+    margin-bottom: 20px;
 }
 
 .helpBox {
-    position: fixed;
     bottom: 0;
-    margin: 40px 14px 24px 14px;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
     .helpBox {
-        margin-left: 4px;
+
     }
 }
 
 .helpTextBox {
+    box-sizing: border-box;
+    align-self: center;
     padding: 14px 14px 18px 14px;
     width: 197px;
     height: 238px;
@@ -194,9 +204,8 @@
 }
 
 .helpText {
+    margin: 0;
     margin-top: 14px;
-    width: 168px;
-    height: 80px;
     flex-shrink: 0;
     color: var(--mainTextColor);
     font-size: 12px;
@@ -223,7 +232,6 @@
 }
 
 .buttonHelp {
-    margin-top: 19px;
     padding: 0;
     gap: 8px;
     display: flex;
@@ -247,13 +255,21 @@
 }
 
 .buttonLogOut {
-    margin-top: 24px;
+    margin: 24px;
+    margin-bottom: 24px;
     gap: 14px;
     display: flex;
     align-items: center;
     background-color: transparent;
     border: none;
-    padding: 0;
+    cursor: pointer;
+
+    transition: 200ms linear;
+}
+
+.buttonLogOut:hover, .buttonLogOut:active{
+    background-color: var(--lightBgColor);
+    border-radius: 8px;
 }
 
 .iconLogOut {
