--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,9 @@
 :root {
+  --welcomBackground: linear-gradient(
+    180deg,
+    rgba(196, 196, 196, 0) 25%,
+    #bedbb0 92.19%
+  );
   --secondaryButtonsColor: #121212;
   --mainBgColor: #f6f6f7;
   --mainTextColorLowOp: rgba(22, 22, 22, 0.5);
