--- a/src/components/Welcome/WelcomeContent.module.css
+++ b/src/components/Welcome/WelcomeContent.module.css
@@ -4,11 +4,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(
-    180deg,
-    rgba(196, 196, 196, 0) 25%,
-    #bedbb0 92.19%
-  );
+  background: var(--welcomBackground);
 }
 
 .welcomeContainer {
@@ -45,14 +41,12 @@
 
   @media (min-width: 768px) {
     height: 60px;
-    margin-bottom: 36px;
   }
 }
 
 .welcomeLogoIcon {
   width: 40px;
   height: 40px;
-  stroke: #ffffff;
 
   @media (min-width: 768px) {
     width: 48px;
@@ -61,7 +55,7 @@
 }
 
 .welcomeLogoTitle {
-  color: #161616;
+  color: var(--blackColor);
   font-size: 28px;
   font-family: Poppins;
   font-weight: 600;
@@ -77,7 +71,7 @@
   margin-top: 24px;
   margin-bottom: 48px;
   text-align: center;
-  color: #161616;
+  color: var(--blackColor);
   font-size: 14px;
   font-family: 'Poppins';
   line-height: 1.28;
@@ -90,6 +84,7 @@
 
   @media (min-width: 768px) {
     width: 473px;
+    margin-top: 36px;
     margin-bottom: 36px;
   }
 }
@@ -98,7 +93,7 @@
   padding: 14px 0;
   margin-bottom: 14px;
   text-decoration: none;
-  color: #ffffff;
+  color: var(--whiteColor);
   text-align: center;
   font-size: 14px;
   font-family: 'Poppins';
@@ -106,12 +101,13 @@
   letter-spacing: -0.28px;
   min-width: 320px;
   border-radius: 8px;
-  background: #161616;
+  background: var(--blackColor);
 
   transition: all 250ms linear;
 
   &:hover {
-    opacity: 0.8;
+    background-color: var(--modalBtnHover);
+    color: var(--blackColor);
   }
 
   @media (min-width: 375px) {
@@ -127,7 +123,7 @@
   padding: 14px 0;
   margin-bottom: 14px;
   text-decoration: none;
-  color: #ffffff;
+  color: var(--whiteColor);
   text-align: center;
   font-size: 14px;
   font-family: 'Poppins';
@@ -135,73 +131,13 @@
   letter-spacing: -0.28px;
   min-width: 320px;
   border-radius: 8px;
-  background: #161616;
+  color: var(--blackColor);
 
   transition: all 250ms linear;
 
   &:hover {
-    /* color: #9dc888; */
-    background-color: #9dc888;
-    /* opacity: 0.8; */
-  }
-
-  @media (min-width: 375px) {
-    width: 335px;
-  }
-
-  @media (min-width: 768px) {
-    width: 473px;
-  }
-}
-
-.welcomeTestBtn {
-  padding: 14px 0;
-  margin-bottom: 14px;
-  text-decoration: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Poppins';
-  font-weight: 500;
-  letter-spacing: -0.28px;
-  min-width: 320px;
-  border-radius: 8px;
-  background: #161616;
-
-  transition: all 250ms linear;
-
-  &:hover {
-    background-color: #9dc888;
-    color: #161616;
-  }
-
-  @media (min-width: 375px) {
-    width: 335px;
-  }
-
-  @media (min-width: 768px) {
-    width: 473px;
-  }
-}
-
-.welcomeTest {
-  padding: 14px 0;
-  margin-bottom: 14px;
-  text-decoration: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Poppins';
-  font-weight: 500;
-  letter-spacing: -0.28px;
-  min-width: 320px;
-  border-radius: 8px;
-  background: #161616;
-
-  transition: all 250ms linear;
-
-  &:hover {
-    color: #9dc888;
+    background-color: var(--modalBtnHover);
+    color: var(--whiteColor);
   }
 
   @media (min-width: 375px) {
