--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,4 +4,31 @@
 
 .mainPage{
     width: 100%;
+    height: 100vh;
+}
+
+.boardDefault{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--lightBgColor);
+}
+
+.boardDefaultText{
+    max-width: 486px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: -0.02em;
+    text-align: center;
+
+    color: var(--secondaryTextColor);
+}
+
+.boardDefaultLink{
+    color: var(--accentColor);
+    cursor: pointer;
 }
