--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -14,13 +14,14 @@
 
 @media screen and (min-width: 768px) {
     .sideBar {
-        width: 260px;
+        width: 310px;
     }
 }
 
 @media screen and (min-width: 1440px) {
     .sideBar {
-        width: 260px;
+        position: static;
+        width: 310px;
         transform: none;
 
     }
