--- a/src/components/DefaultBoard/DefaultBoard.module.css
+++ b/src/components/DefaultBoard/DefaultBoard.module.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
 
     background-color: var(--lightBgColor);
 }
@@ -17,6 +18,7 @@
     text-align: center;
 
     color: var(--secondaryTextColor);
+    
 }
 
 .boardDefaultLink{
