--- a/src/components/Welcome/WelcomeContent.module.css
+++ b/src/components/Welcome/WelcomeContent.module.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  padding: 20px;
   background: var(--welcomBackground);
 }
 
@@ -11,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 320px;
+  min-width: 300px;
   @media (min-width: 375px) {
     width: 335px;
   }
@@ -76,7 +77,6 @@
   font-family: 'Poppins';
   line-height: 1.28;
   letter-spacing: -0.28px;
-  min-width: 320px;
 
   @media (min-width: 375px) {
     width: 335px;
@@ -98,7 +98,7 @@
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.28px;
-  min-width: 320px;
+  min-width: 300px;
   border-radius: 8px;
   background: var(--secondaryBgColor);
 
@@ -127,7 +127,7 @@
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.28px;
-  min-width: 320px;
+  min-width: 300px;
   border-radius: 8px;
 
   transition: all 250ms linear;
