--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -89,7 +89,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--lightBgColor);
+    background-color: var(--logoBgColor);
     padding-left: 1px;
 }
 
@@ -97,12 +97,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    fill: var(--mainTextColor);
-    stroke: var(--mainTextColor);
+    fill: var(--logoIconColor);
+    stroke: var(--logoIconColor);
 }
 
 .title {
-    color: var(--mainTextColor);
+    color: var(--sidebarMainTextColor);
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -122,7 +122,7 @@
 }
 
 .bordTitle {
-    color: var(--secondaryTextColor);
+    color: var(--sidebarLightColor);
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -136,14 +136,14 @@
     align-items: center;
     margin-top: 8px;
     padding: 14px 0 14px;
-    border-top: 1px solid var(--secondaryTextColor);
-    border-bottom: 1px solid var(--secondaryTextColor);
+    border-top: 1px solid var(--sidebarLightColorEl);
+    border-bottom: 1px solid var(--sidebarLightColorEl);
 }
 
 .buttonText {
     width: 76px;
     display: block;
-    color: var(--mainTextColor);
+    color: var(--sidebarMainTextColor);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -162,7 +162,7 @@
     flex-shrink: 0;
     border: none;
     border-radius: 6px;
-    background-color: var(--accentColor);
+    background-color: var(--boardAddIconBg);
     transition: background-color 0.3s ease;
 
     cursor: pointer;
@@ -173,7 +173,7 @@
 }
 
 .iconCreate {
-    stroke: var(--darkBgColor);
+    stroke: var(--addIconPlusColor);
 }
 
 .bordList {
@@ -200,7 +200,7 @@
     height: 238px;
     flex-shrink: 0;
     border-radius: 8px;
-    background: var(--inputsBgColor);
+    background: var(--helpBgColor);
 }
 
 @media screen and (min-width: 768px) {
@@ -216,7 +216,7 @@
     margin: 0;
     margin-top: 14px;
     flex-shrink: 0;
-    color: var(--mainTextColor);
+    color: var(--sidebarMainTextColor);
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -241,7 +241,7 @@
 }
 
 .buttonHelp {
-    color: var(--mainTextColor);
+    color: var(--sidebarMainTextColor);
     padding: 0;
     margin-top: 10px;
     gap: 8px;
@@ -263,8 +263,8 @@
 }
 
 .iconHelp {
-    stroke: var(--mainTextColor);
-    fill: var(--lightBgColor);
+    stroke: var(--helpIconColor);
+    fill: var(--helpBgColor);
     transition: 200ms linear;
 }
 
@@ -294,17 +294,26 @@
 }
 
 .buttonLogOut:hover, .buttonLogOut:active{
-    background-color: var(--lightBgColor);
+    background-color: var(--accentColorHover);
     border-radius: 8px;
+
+    .iconLogOut {
+        stroke: #ffffff
+    }
+
+    .logOutButtonText {
+        color: #ffffff;
+    }
+
 }
 
 .iconLogOut {
-    stroke: var(--accentColor);
+    stroke: var(--logoutIconColor);
     fill: transparent;
 }
 
 .logOutButtonText {
-    color: var(--mainTextColor);
+    color: var(--sidebarMainTextColor);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
