--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -11,16 +11,20 @@
   );
 }
 
-.registerForm {
+.authForm {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background: #151515;
   border-radius: 8px;
   padding: 0;
-  margin-bottom: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 363px;
+}
+
+.registerForm {
+  margin: 0;
+  padding: 0;
   min-width: 320px;
   @media (min-width: 375px) {
     width: 335px;
@@ -28,48 +32,42 @@
 
   @media (min-width: 768px) {
     width: 424px;
-    height: 395px;
   }
 }
-
 .loginForm {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  background: #151515;
-  border-radius: 8px;
   padding: 0;
-  margin-bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 300px;
+  margin: 0;
   min-width: 335px;
-  /* @media (min-width: 375px) {
-    width: 335px;
-  } */
 
   @media (min-width: 768px) {
     width: 424px;
-    height: 332px;
+    height: 228px;
   }
 }
 
 .authNav {
-  margin-left: 28px;
-  margin-top: 24px;
-  margin-right: auto;
+  margin: 0;
   padding: 0;
   @media (min-width: 768px) {
-    margin-top: 40px;
+  }
+}
+
+.authLink1 {
+  margin-left: 24px;
+  @media (min-width: 768px) {
     margin-left: 40px;
   }
 }
-.authLink {
+
+.authLink1,
+.authLink2 {
   display: inline-block;
   text-decoration: none;
   margin-bottom: 0px;
-  /* @media (min-width: 768px) {
-    margin-bottom: 24px;
-  } */
+  margin-top: 24px;
+  @media (min-width: 768px) {
+    margin-top: 40px;
+  }
   margin-right: 20px;
   font-family: var(--font-family);
   font-weight: 500;
@@ -91,12 +89,13 @@ Form {
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
   width: 311px;
 
   @media (min-width: 768px) {
     width: 378px;
     height: 281px;
+    margin-bottom: 10px;
   }
 }
 
@@ -159,7 +158,6 @@ Form {
   @media (min-width: 768px) {
     width: 344px;
     height: 49px;
-    margin-bottom: 17px;
   }
 
   &:hover {
