--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -92,6 +92,11 @@
     padding-left: 1px;
 }
 
+.iconLogo{
+    stroke: var(--logoIconColor);
+    fill: var(--logoIconColor)
+}
+
 .title {
     color: var(--sidebarMainTextColor);
     font-size: 16px;
