--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -24,6 +24,12 @@
   stroke: var(--mainTextColor);
 }
 
+@media screen and (min-width: 1024px) {
+  .iconBurger {
+    display: none;
+  }
+}
+
 .navMenu {
   display: flex;
   align-items: center;
