--- a/src/components/Welcome/WelcomeContent.module.css
+++ b/src/components/Welcome/WelcomeContent.module.css
@@ -102,7 +102,7 @@
   border-radius: 8px;
   background: var(--secondaryBgColor);
 
-  transition: all 250ms linear;
+  transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     background-color: var(--accentColorHover);
@@ -130,7 +130,7 @@
   min-width: 300px;
   border-radius: 8px;
 
-  transition: all 250ms linear;
+  transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     color: var(--mainTextColor);
