--- a/src/components/App.css
+++ b/src/components/App.css
@@ -123,7 +123,7 @@
    /* кольори в формах */
   --inputsBgColor: #fcfcfc;
   --inputsPlaceholderColor: rgb(160,160,160);
-  --inputsBorderColor: rgb(99,109,93);
+  --inputsBorderColor: #5255BC;
   --authInactiveButtonColor: rgb(91,91,91);
 
    /*кольори значків пріоритетів */
