--- a/src/components/ScreensPage/ScreensPage.module.css
+++ b/src/components/ScreensPage/ScreensPage.module.css
@@ -1,5 +1,6 @@
 .screensWrap {
-  background-color: var(--darkBgColor);
+  background-color: var(--lightBgColor);
   width: 100%;
   height: 100%;
+
 }
