--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,11 +1,13 @@
 .main{
     display: flex;
-    overflow: hidden;
     height: 100vh;
+    background-color: var(--lightBgColor);
 }
 
 .mainPage{
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+    padding-bottom: 100px;
 }
 
