--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -1,13 +1,50 @@
 .menuTheme {
+  position: relative;
   margin: 0;
   width: 68px;
+  max-height: 200px;
   color: var(--mainTextColor);
   background-color: var(--secondaryBgColor);
+  opacity: 0.8;
 
   display: flex;
   align-items: center;
+  gap: 4px;
+}
+
+.buttonMenu {
+  height: 16px;
+  width: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--secondaryBgColor);
 }
 
 .iconChevronDown {
   stroke: var(--mainTextColor);
+}
+
+.dropdownMenu {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  transform: translateY(100%);
+  height: 107px;
+  width: 100px;
+  padding: 18px;
+  background-color: #151515;
+  border-radius: 8px;
+  border: 1px;
+  opacity: 0;
+  transform: translateY(-10px);
+  visibility: hidden;
+  transform: 0.3s;
+}
+
+.dropdownMenu {
+  transform: translateY(0);
+  opacity: 0;
+  visibility: visible;
 }
