--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -172,6 +172,50 @@ Form {
   }
 }
 
+.iconBtn {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 2px;
+  padding: 10px 0;
+  background-color: inherit;
+  border: none;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  cursor: pointer;
+
+  @media screen and (min-width: 768px) {
+    width: 53px;
+    height: 53px;
+  }
+}
+
+svg {
+  width: 18px;
+  height: 18px;
+
+  margin-right: 5px;
+  stroke-width: 1.3px;
+  stroke: #fff;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 6px;
+  }
+}
+
+.errorMessage {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: left;
+  height: 10px;
+  font-size: 12px;
+  color: #9dc888;
+  padding-left: 12px;
+  font-size: 12px;
+  font-weight: 400;
+}
+
 /* // * Підправити стилі на виведення помилки
 // * звірити валідації
 // * підключити зміну теми  
