--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    width: 335px;
+    width: 355px;
 }
 
 .columnTitleWrap{
@@ -12,6 +12,7 @@
     padding: 18px 20px;
     border-radius: 8px;
     justify-content: space-between;
+    margin-bottom: 14px;
 }
 
 .columnTitle{
@@ -21,4 +22,27 @@
     letter-spacing: -0.02em;
     text-align: left;
     color: var(--mainTextColor);
+}
+
+.columnList{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 680px;
+    padding-right: 30px;
+    margin-bottom: 20px;
+}
+
+.columnList::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--darkBgColor);
+}
+
+.columnList::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    width: 4px;
+    border: none;
+    background-color: #404040;
 }
