--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -30,7 +30,7 @@
     gap: 12px;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 680px;
+    height: 70vh;
     padding-right: 30px;
     margin-bottom: 20px;
 }
