--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -8,7 +8,7 @@
   width: 225px;
   height: 100vh;
   background-color: var(--sidebarBgColor);
-  /* transform: translateX(-100%); */
+  transform: translateX(-100%);
   transition: 500ms transform;
 }
 
@@ -19,12 +19,12 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .sideBar {
-    width: 260px;
-    position: static;
-    transform: none;
+    .sideBar {
+      width: 260px;
+      position: static;
+      transform: none;
+    }
   }
-}
 
 @media screen and (min-width: 1440px) {
   .sideBar {
@@ -36,28 +36,7 @@
 
 /* має працювати як буде кнопка відкриття */
 
-.sideBarClose {
-  display: none;
-}
-
-@media screen and (min-width: 1024px) {
-  .sideBarClose {
-    display: unset;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    top: 0;
-    left: 0;
-    width: 260px;
-    height: 100vh;
-    background-color: var(--sidebarBgColor);
-  }
-}
-
-
-
-/* .openSideBar {
+.openSideBar {
   min-height: 768px;
   z-index: 2;
 
@@ -89,7 +68,7 @@
     position: absolute;
     width: 260px;
   }
-} */
+}
 
 .titleBox {
   padding: 14px 14px 30px 14px;
@@ -97,9 +76,9 @@
 
 
 @media screen and (min-width: 1024px) {
-  .titleBox {
-    padding: 24px 24px 40px 24px;
-  }
+    .titleBox {
+        padding: 24px 24px 40px 24px;
+    }
 }
 
 .iconBox {
@@ -111,29 +90,29 @@
 }
 
 .logoIconContainer {
-  border-radius: 10px;
-  width: 32px;
-  height: 32px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--logoBgColor);
-  padding-left: 1px;
+    border-radius: 10px;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--logoBgColor);
+    padding-left: 1px;
 }
 
-.iconLogo {
-  stroke: var(--logoIconColor);
-  fill: var(--logoIconColor)
+.iconLogo{
+    stroke: var(--logoIconColor);
+    fill: var(--logoIconColor)
 }
 
 .title {
-  color: var(--sidebarMainTextColor);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: -0.64px;
-  margin: 0;
+    color: var(--sidebarMainTextColor);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.64px;
+    margin: 0;
 }
 
 .bordBox {
@@ -147,50 +126,50 @@
 }
 
 .bordTitle {
-  color: var(--sidebarLightColor);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.24px;
+    color: var(--sidebarLightColor);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.24px;
 }
 
 .buttonBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 8px;
-  padding: 14px 0 14px;
-  border-top: 1px solid var(--sidebarLightColorEl);
-  border-bottom: 1px solid var(--sidebarLightColorEl);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8px;
+    padding: 14px 0 14px;
+    border-top: 1px solid var(--sidebarLightColorEl);
+    border-bottom: 1px solid var(--sidebarLightColorEl);
 }
 
 .buttonText {
-  width: 76px;
-  display: block;
-  color: var(--sidebarMainTextColor);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  letter-spacing: -0.28px;
+    width: 76px;
+    display: block;
+    color: var(--sidebarMainTextColor);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: -0.28px;
 }
 
 .buttonCreate {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  border: none;
-  border-radius: 6px;
-  background-color: var(--boardAddIconBg);
-  transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    border: none;
+    border-radius: 6px;
+    background-color: var(--boardAddIconBg);
+    transition: background-color 0.3s ease;
 
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .buttonCreate:hover {
@@ -198,22 +177,17 @@
 }
 
 .iconCreate {
-  stroke: var(--addIconPlusColor);
+    stroke: var(--addIconPlusColor);
 
 }
 
 .bordList {
   color: var(--mainTextColor);
+  margin-bottom: auto;
   overflow-y: auto;
   margin: 0;
-  padding: 0 4px;
+  padding: 0 24px;
   margin-bottom: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .bordList {
-    padding-left: 15px;
-  }
 }
 
 .helpBox {
@@ -223,14 +197,14 @@
 }
 
 .helpTextBox {
-  box-sizing: border-box;
-  align-self: center;
-  padding: 14px 14px 18px 14px;
-  width: 197px;
-  height: 238px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  background: var(--helpBgColor);
+    box-sizing: border-box;
+    align-self: center;
+    padding: 14px 14px 18px 14px;
+    width: 197px;
+    height: 238px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: var(--helpBgColor);
 }
 
 @media screen and (min-width: 1024px) {
@@ -243,15 +217,15 @@
 }
 
 .helpText {
-  margin: 0;
-  margin-top: 14px;
-  flex-shrink: 0;
-  color: var(--sidebarMainTextColor);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 16px;
-  letter-spacing: -0.24px;
+    margin: 0;
+    margin-top: 14px;
+    flex-shrink: 0;
+    color: var(--sidebarMainTextColor);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.24px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -271,39 +245,39 @@
 }
 
 .buttonHelp {
-  color: var(--sidebarMainTextColor);
-  padding: 0;
-  margin-top: 10px;
-  gap: 8px;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  transition: 200ms linear;
+    color: var(--sidebarMainTextColor);
+    padding: 0;
+    margin-top: 10px;
+    gap: 8px;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: 200ms linear;
 }
 
 .buttonHelp:hover {
-  color: var(--accentColor);
-  stroke: var(--accentColor);
+    color: var(--accentColor);
+    stroke: var(--accentColor);
 }
 
 .buttonHelp:hover .iconHelp {
-  stroke: var(--accentColor);
+    stroke: var(--accentColor);
 }
 
 .iconHelp {
-  stroke: var(--helpIconColor);
-  fill: var(--helpBgColor);
-  transition: 200ms linear;
+    stroke: var(--helpIconColor);
+    fill: var(--helpBgColor);
+    transition: 200ms linear;
 }
 
 .helpButtonText {
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.24px;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.24px;
 
 
 }
@@ -324,51 +298,35 @@
 
 .buttonLogOut:hover,
 .buttonLogOut:active {
-  background-color: var(--accentColorHover);
-  border-radius: 8px;
+    background-color: var(--accentColorHover);
+    border-radius: 8px;
 
-  .iconLogOut {
-    stroke: #ffffff
-  }
+    .iconLogOut {
+        stroke: #ffffff
+    }
 
-  .logOutButtonText {
-    color: #ffffff;
-  }
+    .logOutButtonText {
+        color: #ffffff;
+    }
 
 }
 
 .iconLogOut {
-  stroke: var(--logoutIconColor);
-  fill: transparent;
+    stroke: var(--logoutIconColor);
+    fill: transparent;
 }
 
 .logOutButtonText {
-  color: var(--sidebarMainTextColor);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.24px;
+    color: var(--sidebarMainTextColor);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.24px;
 }
 
 @media screen and (min-width: 1024px) {
   .logOutButtonText {
     font-size: 16px;
-  }
-}
-
-.overlay {
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-@media screen and (min-width: 1024px) {
-  .overlay {
-    display: none;
   }
 }
